--- a/client/src/sass/_setting.scss
+++ b/client/src/sass/_setting.scss
@@ -58,3 +58,6 @@ $form-success-border: #c3e6cb;
 $dropzone-bg: #101010;
 $modal-bg: #101010;
 $modal-content-bg: #f5f5f5;
+
+$page-404-bg: #101010;
+$page-404-color: #fff;
