--- a/client/src/sass/components/Comment.scss
+++ b/client/src/sass/components/Comment.scss
@@ -1,3 +1,5 @@
+@import '../setting';
+
 .comment-section {
   min-width: $min-screen-size;
   padding-bottom: 150px;
@@ -37,7 +39,7 @@
   font-size: 18px;
   resize: none;
   margin-bottom: 40px;
-  
+
   &:focus {
     outline: none;
   }
