--- a/client/src/sass/components/Modal-form.scss
+++ b/client/src/sass/components/Modal-form.scss
@@ -1,4 +1,6 @@
-.user-section {
+@import '../setting';
+
+.modal-form {
   min-width: $min-screen-size;
   background: $login-section-bg;
   position: absolute;
@@ -16,58 +18,58 @@
 }
 
 @-webkit-keyframes user-modal-show {
-  0% { 
-    opacity: 0; 
+  0% {
+    opacity: 0;
     transform: translateY(-20px);
   }
 
-  50% { 
-    opacity: 1; 
+  50% {
+    opacity: 1;
     transform: translateY(10px);
   }
 
-  100% { 
-    opacity: 1; 
+  100% {
+    opacity: 1;
     transform: translateY(0);
   }
 }
 
 @keyframes user-modal-show {
-  0% { 
-    opacity: 0; 
+  0% {
+    opacity: 0;
     transform: translateY(-20px);
   }
 
-  50% { 
-    opacity: 1; 
+  50% {
+    opacity: 1;
     transform: translateY(10px);
   }
 
-  100% { 
-    opacity: 1; 
+  100% {
+    opacity: 1;
     transform: translateY(0);
   }
 }
 
-.user-form {
+.modal-form-content {
   width: 460px;
   margin: 0 auto;
 }
 
-.user-header {
+.modal-form-header {
   font-family: $base-font-bold;
   font-size: 30px;
   letter-spacing: .09em;
 }
 
-.user-label {
+.modal-form-label {
   display: block;
   font-size: 18px;
   letter-spacing: .1em;
   margin-bottom: 2px;
 }
 
-.user-input {
+.modal-form-input {
   width: 100%;
   border: 1px solid $input-border-color;
   height: 60px;
@@ -79,16 +81,16 @@
   }
 }
 
-.user-button {
+.modal-form-button {
   width: 100%;
   margin-bottom: 35px;
 }
 
-.user-form-group {
+.modal-form-group {
   margin-bottom: 18px;
 }
 
-.user-action {
+.modal-form-action {
   font-size: 18px;
   font-family: $base-font-bold;
   letter-spacing: .1em;
@@ -96,7 +98,7 @@
   padding-left: 10px;
 }
 
-.user-switch-button {
+.modal-form-link {
   margin-left: 7px;
   letter-spacing: .1em;
   transition: .3s;
@@ -112,29 +114,29 @@
   }
 }
 
-.user-form-errors {
+.modal-form-errors {
   padding: 22px 0;
 }
 
-.user-form-message {
+.modal-form-message {
   border: 1px solid transparent;
   padding: 12px 20px;
   font-size: 16px;
   border-radius: 4px;
 }
 
-.user-form-error {
+.modal-form-error {
   border-color: $form-error-border;
   background-color: $form-error-bg;
   color: $form-error-color;
 }
 
-.user-form-success {
+.modal-form-success {
   color: $form-success-color;
   background-color: $form-success-bg;
   border-color: $form-success-border;
 }
 
-.user-form-message:not(:last-of-type) {
+.modal-form-message:not(:last-of-type) {
   margin-bottom: 15px;
 }
